# Futurisys

./: .dockerignore  .gitattributes  .gitignore  Deploiment_ML.code-workspace  Dockerfile  Dockerfile.hf_space  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  docs.yml
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  logs.py  predict.py  schemas.py
app/core/: config.py  errors.py
app/db/: models.py  repository.py  session.py
app/ml/: model.pkl  model_loader.py  serve.py
db/: 00_raw_employee.sql  01_Import_csv.sql  02_raw_employee_clean.sql  03_mart_employee.sql  04_mart_create_view.sql  05_ml_logging.sql
docs/: api.md  architecture.md  changelog.md  configuration.md  data.md  deployment.md  evaluation.md  getting-started.md  index.md  maintenance.md  model.md
docs/reference/: api.md
ml_service.egg-info/: PKG-INFO  SOURCES.txt
scripts/: create_db.py
tests/: test_api.py  test_api_validation.py  test_config.py  test_db.py  test_main.py  test_model.py  test_schemas_validation.py  test_utils.py
